[gd_scene load_steps=2 format=2]

[ext_resource path="res://Prototype/Buzzes/Comment.gd" type="Script" id=1]

[node name="Comment" type="HBoxContainer"]
margin_top = 4.0
margin_right = 816.0
margin_bottom = 40.0
focus_mode = 2
size_flags_horizontal = 3
script = ExtResource( 1 )

[node name="CommentPanel" type="Panel" parent="."]
margin_right = 816.0
margin_bottom = 36.0
rect_min_size = Vector2( 0, 35 )
size_flags_horizontal = 3

[node name="CommentLabel" type="Label" parent="CommentPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "This is comment text"
align = 1
valign = 1

[node name="UserID" type="Label" parent="CommentPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -721.0
text = "USERID"
align = 1
valign = 1
